--- a/weather.html
+++ b/weather.html
@@ -36,7 +36,10 @@
         <div class="col-sm-6 mb-3 mb-sm-0">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">GUAYAQUIL</h5>
+                    <img src="http://openweathermap.org/img/w/{{ clima.icono }}.png" alt="...">
+                    <h5 class="card-title">{{clima.ciudad}}</h5>
+                    <p class="card-text">{{clima.descripcion}}</p> 
+                    <p class="card-text">{{clima.temperatura}}</p>
                     <p class="card-text">MUY CALUSORO</p>
                     <a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                 </div>
@@ -45,8 +48,10 @@
         <div class="col-sm-6">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">QUITO</h5>
-                    <p class="card-text">MUY FRIO</p>
+                    <img src="http://openweathermap.org/img/w/{{ clima.icono }}.png" alt="...">
+                    <h5 class="card-title">{{clima.ciudad}}</h5>
+                    <p class="card-text">{{clima.descripcion}}</p> 
+                    <p class="card-text">{{clima.temperatura}}</p>
                     <a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                 </div>
             </div>
