--- a/weather.html
+++ b/weather.html
@@ -40,7 +40,6 @@
                     <h5 class="card-title">{{clima.ciudad}}</h5>
                     <p class="card-text">{{clima.descripcion}}</p> 
                     <p class="card-text">{{clima.temperatura}}</p>
-                    <p class="card-text">MUY CALUSORO</p>
                     <a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                 </div>
             </div>
@@ -50,9 +49,11 @@
                 <div class="card-body">
                     <img src="http://openweathermap.org/img/w/{{ clima.icono }}.png" alt="...">
                     <h5 class="card-title">{{clima.ciudad}}</h5>
-                    <p class="card-text">{{clima.descripcion}}</p> 
+                    <p class="card-text">{{clima.descripcion}}
                     <p class="card-text">{{clima.temperatura}}</p>
+                    </p>
                     <a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a>
+                    
                 </div>
             </div>
         </div>
@@ -60,3 +61,4 @@
 </body>
 
 </html>
+      
